modules/networking/vpc.tf
#resource "aws_vpc" "my_vpc" {
 # cidr_block = var.my_vpc_cidr_block

  #tags = {
   # Name    = var.vpc_name
    #Purpose = var.vpc_purpose
  #}
#}
